<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Gamers\' Web</string>
<string name="app_splash_screen_title">Gamers\'\nWeb</string>
<string name="version_info">Version 1.1\nCopyright © 2016 Gamers\' Web. All Rights Reserved.</string>

<string name="menu_title">Main Menu</string>
<string name="menu_item_welcome">Welcome Screen</string>
<string name="menu_item_games">Games</string>
<string name="menu_item_scores">Scores</string>
<string name="menu_item_account_update">Update Account</string>
<string name="menu_item_account_create">Create Account</string>
<string name="menu_item_account_delete">Delete Account</string>
<string name="menu_item_account_login">Account Login</string>
<string name="menu_item_account_logout">Account Logout</string>
<string name="menu_item_account">Account</string>
<string name="menu_item_main_menu">Main menu</string>
<string name="menu_item_tictactoe">Tic Tac Toe</string>
<string name="menu_item_about">About</string>
<string name="menu_item_info">About this application</string>
<string name="menu_item_feedback_post">Post a feedback</string>
<string name="menu_item_feedback_read">Review your feedbacks</string>
<string name="menu_item_scores_by_name">Sorted by gamers\' names</string>
<string name="menu_item_scores_by_score">Sorted by gamers\' scores</string>

<string name="str_Welcome">Welcome</string>
<string name="str_NotSet">Click button to set</string>
<string name="str_PleaseChoose">"Click to make a choice ..."</string>
<string name="str_LastName">Last name:</string>
<string name="str_FirstName">First name:</string>
<string name="str_Username">User name:</string>
<string name="str_Ranking">Ranking</string>
<string name="str_Score">Score</string>
<string name="str_No_Scores">No scores to show.</string> 
<string name="str_About">About</string>
<string name="str_Settings">Settings</string>
<string name="str_Account">Account</string>
<string name="str_Scores">Scores</string>
<string name="str_Local_Scores">Local Scores</string>
<string name="str_All_Scores">All Scores</string>
<string name="str_TicTacToe">Tic Tac Toe</string>
<string name="str_Nickname">Nickname:</string>
<string name="str_Email">Email Address:</string>  
<string name="str_Password">Password:</string>  
<string name="str_ClickToEnterPassword">Set password</string>
<string name="str_PasswordNotSet">Password not set</string>
<string name="str_DateOfBirth">Date of birth:</string>
<string name="str_ClickToEnterDOB">Set birthday</string>
<string name="str_DOBNotSet">DOB not set</string>    
<string name="str_Gender">Gender:</string>
<string name="str_Please_Select">Please select:</string> 
<string name="str_Male">Male</string>  
<string name="str_Female">Female</string>  
<string name="str_EnterPassword">Please enter password:</string>
<string name="str_RepeatPassword">Please repeat password:</string> 
<string name="str_PasswordsMatch">Password entries match</string>
<string name="str_PasswordsNoMatch">Password entries do not match</string>
<string name="str_MainMenu">Main Menu</string>
<string name="str_Restart_Game">Restart Game</string>
<string name="str_Login">Login</string>
<string name="str_Apply">Apply</string>
<string name="str_createAccount">Create Account</string>
<string name="str_updateAccount">Update Account</string>
<string name="str_Account_Login">Account Login</string>
<string name="str_Account_Create">Create Account</string>
<string name="str_deleteAccount">Delete Account</string>
<string name="str_deleteAccountMessage">Click the button below to confirm account deletion.\nTake note:\n(i) you will be logged out of this account\n(ii) account deletion cannot be undone</string>
<string name="str_Guest">Guest</string>
<string name="str_Android">Android</string>
<string name="str_IsNowPlaying">\'s turn</string>
<string name="str_HasWonWith">Won !!!</string>
<string name="str_PlayedAnIllegalMove">attempted an illegal move</string>
<string name="str_GameEndedWithADraw">Game tie!!!</string>
<string name="str_CreateNLogin">Create</string>
<string name="str_CreateAvatar">Create Avatar</string>
<string name="str_Save">Save</string>
<string name="str_Reset">Reset</string>
<string name="str_DiscardNExit">Cancel</string>
<string name="str_PickGraphic">Select Avatar</string>
<string name="str_cameraChooserTitle">Please choose the camera app to use</string>
<string name="str_imagePickerChooserTitle">Please choose the image selection app to use</string>
<string name="str_passwordAsStars">******</string>
<string name="str_passwordDialogTitle">Account Password Setup</string>
<string name="str_accountInfoMissingWarning">Please complete your account information</string>
<string name="str_create">Create</string>
<string name="str_update">Update</string>
<string name="str_PleaseLogin">Please login first</string>
<string name="str_PleaseLogout">Please logout first</string>
<string name="str_YouAreLoggedOut">You have been logged out</string>
<string name="str_userNameUsedAlreadyWarning">User name already used; Please re-select</string>
<string name="str_accountCreateSuccess">Congratulations !!!\nYour account has been created</string>
<string name="str_accountCreateFailure">Sorry, account creation has failed\nPlease try again</string>
<string name="str_accountUpdateSuccess">Your account has been updated</string>
<string name="str_accountUpdateFailure">Sorry, account update has failed\nPlease try again</string>
<string name="str_accountAgeRestrictionError">Sorry, you must be at least 18 years of age to create an account</string>
<string name="str_accountLoginSuccess">You are now logged in</string>
<string name="str_accountLoginFailure">User name + password not found\nPlease try again</string>
<string name="str_invalidEmailError">Email entered is invalid\nPlease re-enter a valid email</string>
<string name="str_avatarCreateFailure">Failed to save your avatar\nPlease goto Update Account and retry</string>
<string name="str_avatarCreateFailureAfterCreate">Congratulations !!!\nYour account has been created\nBut, failed to save your avatar\nPlease goto Update Account and retry</string>
<string name="str_avatarUpdateFailureAfterUpdate">Your account has been updated\nBut, failed to save your avatar\nPlease retry</string>
<string name="str_VS">vs</string>
<string name="str_ScoresTableGamerNameColumnTitle">Gamer</string>
<string name="str_ScoresTableGamerScoreColumnTitle">Score</string>
<string name="str_ByGamerScores">By Gamers\' Scores</string>
<string name="str_ByGamerName">By Gamers\' Names</string>
<string name="str_Feedback">Feedback</string>
</resources>
