<?xml version="1.0" encoding="utf-8"?>
<!--  Important: every element in this layout must have an id attribute to support the
 		default onSaveInstanceState() implementation -->
<LinearLayout
  android:id="@+id/LinearLayout_master"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/white">
	
	<ScrollView
		android:id="@+id/ScrollView_master"
		android:isScrollContainer="true"
		android:scrollbars="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/settings_background">
		
		<LinearLayout
			android:id="@+id/LinearLayout_UserNameMaster"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="3dp"
			android:paddingBottom="3dp">
			
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">		
				<TextView
					android:id="@+id/TextView_FirstName"
					android:text="@string/str_FirstName"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dp"/>
				<EditText
					android:id="@+id/EditText_FirstName"
					android:focusable="true"
					android:textSize="@dimen/account_settings_text_size"
                    android:textColor="@color/settings_text"
					android:inputType="textPersonName|textCapWords"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:paddingLeft="4dp"
					android:background="@null"/>
			</LinearLayout>			
			
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">		
				<TextView
					android:id="@+id/TextView_LastName"
					android:text="@string/str_LastName"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dp"/>
				<EditText
					android:id="@+id/EditText_LastName"
					android:focusable="true"
					android:textSize="@dimen/account_settings_text_size"
                    android:textColor="@color/settings_text"
					android:inputType="textPersonName|textCapWords"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:paddingLeft="4dp"
					android:background="@null"/>
			</LinearLayout>
								
			<LinearLayout
			    android:id="@+id/LinearLayout_UserName"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">
				<TextView
					android:id="@+id/TextView_UserName"
					android:text="@string/str_Username"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dp"/>
				<EditText
					android:id="@+id/EditText_Nickname"
					android:focusable="true"
					android:inputType="textPersonName"
                    android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"				
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:maxLength="20"
					android:paddingLeft="4dp"
					android:background="@null"/>	
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/Layout_UserName_Error"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/white"
				android:addStatesFromChildren="true"
				android:gravity="center"
				android:visibility="gone">
				<TextView
					android:id="@+id/TextView_UserName_Error"
					android:text="@string/str_userNameUsedAlreadyWarning"
					android:textColor="@color/settings_text_error"
					android:textSize="@dimen/account_settings_text_size"
					android:background="@android:color/white"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
				android:paddingTop="3dp"
				android:paddingBottom="3dp"					
					/>
			</LinearLayout>
		
			<LinearLayout
			    android:id="@+id/LinearLayout_Email"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">		
				<TextView
					android:id="@+id/TextView_Email"
					android:text="@string/str_Email"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dp"/>
				<EditText
					android:id="@+id/EditText_Email"
					android:focusable="true"
					android:inputType="textEmailAddress"
                    android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:paddingLeft="4dp"
					android:background="@null"/>	
			</LinearLayout>
							
			<LinearLayout
			    android:id="@+id/LinearLayout_Password"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">	
				<TextView
					android:id="@+id/TextView_Password"
					android:text="@string/str_Password"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dp"/>
				<EditText
					android:id="@+id/EditText_Password"
                    android:textColor="@color/settings_text"
					android:text="@string/str_NotSet"
					android:textSize="@dimen/account_settings_text_size"
					android:enabled="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:paddingRight="2pt"
					android:background="@null"
					android:gravity="center_vertical|right"/>
				<ImageButton
					android:id="@+id/Button_Password"
					android:focusable="true"
		            style="@android:style/Widget.Button.Inset"
		            android:src="@android:drawable/btn_plus"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="0dip"
		            android:layout_marginRight="0dip"
		            android:layout_marginBottom="0dip"
		            android:padding="2dip"/>						
			</LinearLayout>									
								
			<LinearLayout
			    android:id="@+id/LinearLayout_DOB"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">	
				<TextView
					android:id="@+id/TextView_DOB"
					android:text="@string/str_DateOfBirth"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="3dp"/>
				<EditText
					android:id="@+id/EditText_DOB"
                    android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:text="@string/str_NotSet"
					android:enabled="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:singleLine="true"
					android:background="@null"
					android:gravity="center_vertical|right"
					android:paddingRight="2pt"/>
				<ImageButton
					android:id="@+id/Button_DOB"
					android:focusable="true"
		            style="@android:style/Widget.Button.Inset"
		            android:src="@android:drawable/btn_plus"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="0dip"
		            android:layout_marginRight="0dip"
		            android:layout_marginBottom="0dip"
		            android:padding="2dip"/>							
			</LinearLayout>		
				
			<LinearLayout
			    android:id="@+id/LinearLayout_Gender"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:addStatesFromChildren="true"
				android:padding="0dp"
				android:gravity="center_vertical">					

				<TextView
					android:id="@+id/TextView_Gender"
					android:text="@string/str_Gender"
					android:textColor="@color/settings_text"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="3dp"/>

				<RadioGroup android:id="@+id/RadioGroup_Gender" 
					android:layout_width="match_parent" 
					android:layout_height="wrap_content"
					android:gravity="right"
					android:orientation="horizontal"
					>
					<RadioButton 
						android:id="@+id/RadioButton_Male" 
						android:text="@string/str_Male" 
						android:textColor="@color/settings_text"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:checked="false"
						android:paddingRight="10pt"
						>
					</RadioButton>
					<RadioButton 
						android:id="@+id/RadioButton_Female" 
						android:text="@string/str_Female" 
						android:textColor="@color/settings_text"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:checked="false" 
						android:paddingRight="10pt"
						>
					</RadioButton>
				</RadioGroup>

			</LinearLayout>
			
			<LinearLayout
			    android:id="@+id/LinearLayout_AvatarMaster"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/white"
				android:padding="0dp">	
				
				<LinearLayout
				    android:id="@+id/LinearLayout_Avatar"
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@android:color/white"
					android:layout_weight="1"
					android:padding="0dp">
													
					<Button
						android:id="@+id/Button_CreateAvatar"
						android:focusable="true"
						android:text="@string/str_CreateAvatar"
						android:textColor="@color/settings_text_title"
						android:textSize="@dimen/account_settings_text_size"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:padding="3dp" 
						android:clickable="true"/>
						
					<Button
						android:id="@+id/Button_PickGraphic"
						android:focusable="true"
						android:text="@string/str_PickGraphic"
						android:textColor="@color/settings_text_title"
						android:textSize="@dimen/account_settings_text_size"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:padding="3dp" 
						android:clickable="true"/>
												
				</LinearLayout>
				<ImageButton
					android:id="@+id/ImageButton_Avatar"
					android:focusable="true"
					android:src="@drawable/person_picture_placeholder"
					android:background="@android:color/background_light"
					android:adjustViewBounds="true"
					android:scaleType="centerInside"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="3dp"
					android:maxHeight="200px"
					android:layout_gravity="center_vertical"
					android:gravity="center"/>
			</LinearLayout>				
			
			<LinearLayout
			    android:id="@+id/LinearLayout_Buttons"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:drawable/edit_text"
				android:padding="0dp">					
				<Button
					android:id="@+id/Button_UpdateAccount"
					android:focusable="true"
					android:layout_weight="1"
					android:text="@string/str_update"
					android:textColor="@color/settings_text_title"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="3dp" 
					android:clickable="true"/>
				<Button
					android:id="@+id/Button_CreateNLoginAccount"
					android:focusable="true"
					android:text="@string/str_CreateNLogin"
					android:layout_weight="1"					
					android:textColor="@color/settings_text_title"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="3dp" 
					android:clickable="true"/>	
				<Button
					android:id="@+id/Button_Reset"
					android:focusable="true"
					android:text="@string/str_Reset"
					android:layout_weight="1"					
					android:textColor="@color/settings_text_title"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="3dp" 
					android:clickable="true"/>					
				<Button
					android:id="@+id/Button_DiscardNExit"
					android:focusable="true"
					android:text="@string/str_DiscardNExit"
					android:layout_weight="1"					
					android:textColor="@color/settings_text_title"
					android:textSize="@dimen/account_settings_text_size"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="3dp" 
					android:clickable="true"/>						

			</LinearLayout>	
		</LinearLayout>	
	</ScrollView>		
</LinearLayout>
