<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/topWelcomeLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  	android:background="@android:color/white"
  	>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
    
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		  	android:background="@android:color/white"
		  	android:gravity="center_horizontal"
		  	android:layout_alignParentTop="true"
		  	>
		  	    
				<TextView  
					android:id="@+id/activity_title_1"
					android:text="@string/app_name"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:textColor="@android:color/black"
				    android:textSize="@dimen/app_name_welcome_activity"
				    android:gravity="center"
				    android:padding="4pt"
				    />
				    
				<TextView  
					android:id="@+id/activity_title_2"
					android:visibility="invisible"
					android:text=" "
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:textColor="@android:color/black"
				    android:textSize="@dimen/app_name_welcome_activity"
				    android:gravity="center"
				    android:padding="4pt"
				    />		
		</LinearLayout>    
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		  	android:background="@android:color/white"
		  	android:layout_centerInParent="true"
		  	>	    	
				<ImageView
					android:id="@+id/ImageView_animatedSplash"
					android:src="@drawable/app_icon_150x150"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content" 	
				    android:gravity="center"
					android:layout_gravity="center_horizontal" 
					android:padding="4pt"
					android:clickable="true"
					/>
			
				<Button 
					android:id="@+id/Button_mainMenu"
					android:text="@string/str_MainMenu"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:layout_gravity="center_horizontal"
					android:padding="4pt"
					/>
		</LinearLayout>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		  	android:background="@android:color/white"
		  	android:layout_alignParentBottom="true"
		  	>
			<TextView 
				android:id="@+id/version_text"
				android:text="@string/version_info" 
			    android:textSize="@dimen/version_size"	
			    android:layout_width="match_parent" 
				android:layout_height="wrap_content" 
				android:gravity="center_horizontal"
				android:singleLine="false"
			    android:textColor="@android:color/black"
			    android:padding="4pt"
			    
			    />
	    </LinearLayout>
	    
	</RelativeLayout>	    
</LinearLayout>